--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,6 @@
     cursor: pointer;
 }
 
-.tiny_cloze_button img {
-    margin-top: -.125rem !important;
-}
-
 .tiny_cloze .form-control {
     width: unset;
 }
@@ -35,8 +31,8 @@
     display: inline;
 }
 
-input.tiny_cloze_marks {
-    width: 4em !important;
+input.tiny_cloze_marks.form-control{
+    width: 4em;
 }
 
 .tiny_cloze_answers .form-group img {
