UI improvement to fix issue #18

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@
     border-color: red;
 }
 
+.tiny_cloze .msg-error {
+    color: red;
+}
+
 .tiny_cloze_answers {
     height: 375px;
     overflow-x: hidden;
